# agent-crash-course

./: README.md
MCP/: squirrel.py
crewai/: squirrelcrew.py  squirrelmulti.py
crewai/squirrel_analyst/: README.md  pyproject.toml
crewai/squirrel_analyst/src/squirrel_analyst/: crew.py  main.py
langchain/: final_agent.py  single_notools.py
