[project]
name = "squirrel_analyst"
version = "0.1.0"
description = "squirrel_analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
squirrel_analyst = "squirrel_analyst.main:run"
run_crew = "squirrel_analyst.main:run"
train = "squirrel_analyst.main:train"
replay = "squirrel_analyst.main:replay"
test = "squirrel_analyst.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
